<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmailIntentActivity">

    <TextView
        android:id="@+id/ActivityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EmailActivity"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/AddressBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ReceiverMail"
        app:layout_constraintTop_toBottomOf="@id/ActivityTitle"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/SubjectBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/EmailSubject"
        app:layout_constraintTop_toBottomOf="@id/AddressBox"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/AttachmentBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Attachment"
        app:layout_constraintTop_toBottomOf="@id/SubjectBox"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SendMail"
        app:layout_constraintTop_toBottomOf="@id/AttachmentBox"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/NextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NextIntent"
        app:layout_constraintTop_toBottomOf="@id/sendButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>